--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="letra">
                 <span>
-                    <a href="#festival">O RolêS</a>
+                    <a href="#festival">O Rolê</a>
                     <a href="#lineup">Line-Up</a>
                     <a href="#votacao">Votação</a>
                     <a href="https://www.eventim.com.br/city/sao-paulo-943/" target="_blank">Ingresso</a>
